--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE >
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -8,4 +8,18 @@
 <body>
     
 </body>
-</html>
+</section
+
+
+
+
+
+
+section>
+    <h2> Filmes e Séries </h2>
+    <div>
+        
+    </div>
+
+    <h2> Filmes e Séries </h2>
+    <div>>
