--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 </div>
 
     <h2> Filmes e Séries </h2>
-    </section
+    </sectionimg{
+        height: 200px;
+    }
+
     <section>
         a href=""> 
         <img src="" alt="">
@@ -40,7 +43,7 @@
             </a>
             <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
-            </a>
+            </a>..,
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
             </
