--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Animais do Cerrado</title>
 </head>
 <body>
-    
+  <header>Conhecendo o  Cerrado</header>  
 </body>
-</section
+<h1>Formadores  em  Ação</h1>
 
 
 
