--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2> Filmes e Séries </h2>
         <div class="categoria-videos">
             <a href=""> <iframe width="560" height="315" src="https://www.youtube.com/embed/nnEDxQxvX7A?si=q8dpsCuc-naxZor9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <img src="" alt="">
+                <img src="" alt="">.
                 img
             </a>
             <a href="">
